apps/web/src/routes/console/pending-films/-components/filters/filters.module.css
.filters {
  display: flex;
  flex-direction: column;
  gap: 20px;
  width: 100%;
}

.filters_row {
  display: flex;
  justify-content: space-between;
  gap: 20px;
  width: 100%;
}

.search {
  flex-grow: 1;
}

.priorities_filter {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  flex-grow: 1;
  gap: 10px;
}

.priorities {
  display: flex;
  gap: 10px;
}

